# ap-task

./: .gitignore  Makefile  README.md  prepare.py  pyproject.toml
src/: main.py  population.py  statistics.py  vaccination.py
tests/: test_statistics.py  test_vaccination.py
