[tool.poetry]
name = "ap_zadacha"
version = "0.1.0"
description = ""
authors = ["Viktor Panteleev <viktor@audienceplatform.tv>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
numpy = "1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
